--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "PlansPlus",
   "description": "Enhancements to GrinnellPlans: Newlove, keybord navigation, new windows for external links, and an updating autofinger list",
-  "version": "1.1.2",
+  "version": "2.0.0",
 
   "content_scripts": [ {
       "js": [ "plansplus.user.js" ],
       "matches": [ "http://grinnellplans.com/*", "http://www.grinnellplans.com/*", "https://grinnellplans.com/*", "https://www.grinnellplans.com/*" ],
-      "run_at": "document_idle"
+      "run_at": "document_idle",
+      "world": "MAIN"
    } ]
 }
